[gd_scene load_steps=4 format=3 uid="uid://3dvd3sgm66t7"]

[ext_resource type="Script" uid="uid://bifktly1hsd5i" path="res://scenes/ui/cards/shop_upgrade_card.gd" id="1_qf70b"]
[ext_resource type="Texture2D" uid="uid://bb0mf72uwfgpg" path="res://assets/package.png" id="2_kdmc3"]
[ext_resource type="Texture2D" uid="uid://bsp6bjlnhnn07" path="res://assets/shop-items/pigeon.png" id="3_imqfm"]

[node name="ShopUpgradeCard" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qf70b")

[node name="UpgradeButton" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 72)
layout_mode = 2
size_flags_horizontal = 3
disabled = true
alignment = 0

[node name="MarginContainer" type="MarginContainer" parent="UpgradeButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="UpgradeButton/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="UpgradeButton/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="NameLabel" type="Label" parent="UpgradeButton/MarginContainer/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Carrier Pigeon"
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UpgradeButton/MarginContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="UpgradeButton/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_kdmc3")
expand_mode = 2

[node name="CostLabel" type="Label" parent="UpgradeButton/MarginContainer/HBoxContainer/VBoxContainer3/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "100,000,000,000"

[node name="VBoxContainer2" type="VBoxContainer" parent="UpgradeButton/MarginContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UpgradeButton/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
alignment = 2

[node name="UpgradeTexture" type="TextureRect" parent="UpgradeButton/MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("3_imqfm")
